# graph-huihuxi

./: api.py  graph-huihuxi.code-workspace  graphrag_reindex_guide.md  index  main.py  pyproject.toml  rag.db
.kiro/specs/knowledge-base-graphrag/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  rules.md  tech.md
.vercel/: project.json
input/: 三种治疗方案的介绍.docx  三种治疗方案的介绍.txt  呼吸机使用常见问题AI解答.docx  呼吸机使用常见问题AI解答.txt  成人阻塞性睡眠呼吸暂停低通气综合征无创通气治疗最佳总结.txt  成人阻塞性睡眠呼吸暂停多学科诊疗指南.txt
prompts/: community_report_graph.txt  extract_graph.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  question_gen_system_prompt.txt  summarize_descriptions.txt
rag/: .env.example  README.md  database.py  main.py  rag_config.py  requirements.txt  start.py  utils.py
rag/data/documents/: 三种治疗方案的介绍.txt  呼吸机使用常见问题AI解答.txt  成人阻塞性睡眠呼吸暂停低通气综合征无创通气治疗最佳总结.txt  成人阻塞性睡眠呼吸暂停多学科诊疗指南.txt
rag/services/: document_processor.py  embedding_service.py  rag_service.py  rerank_service.py  vector_store.py
script/: analyze_chunking_strategy.py  chunking_test_result.json  process_documents.py  rebuild_rag_index.py  test_rag_fix.py  test_rag_query.py  test_smart_chunking.py
scripts/: preprocess_documents.py
search/: __init__.py  basic_search.py  drift_search.py  global_search.py  local_search.py
