[project]
name = "graph-huihuxi"
version = "0.1.0"
description = "GraphRAG API Server - A FastAPI-based server for Microsoft GraphRAG"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "graphrag~=2.2.0",
    "fastapi~=0.112.0",
    "uvicorn~=0.30.5",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "tiktoken>=0.5.0",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "mysql-connector-python>=8.0.33",
    "pymysql>=1.1.0",
    "markdown>=3.5.0",
    "aiofiles>=23.2.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
